force-app/main/default/objects/Lead/fields/Account_Converted_Into__c.field-meta.xml
<CustomField>
    <fullName>Account_Converted_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Converted Into</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Account Converted Into)</relationshipLabel>
    <relationshipName>Leads_Converted</relationshipName>
    <type>Lookup</type>
</CustomField>