force-app/main/default/objects/Lead/fields/AlternativeEmail__c.field-meta.xml
<CustomField>
    <fullName>AlternativeEmail__c</fullName>
    <label>Alternative Email</label>
    <type>Email</type>
</CustomField>