force-app/main/default/objects/Lead/fields/Annual_HOA_Dues__c.field-meta.xml
<CustomField>
    <fullName>Annual_HOA_Dues__c</fullName>
    <label>Annual HOA Dues</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>