force-app/main/default/objects/Lead/fields/Annual_Property_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Property_Insurance__c</fullName>
    <label>Annual Property Insurance</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>