force-app/main/default/objects/Lead/fields/Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Type__c</fullName>
    <label>Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Borrower</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>