force-app/main/default/objects/Lead/fields/Bridge_Guidelines_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Guidelines_Approved_Date__c</fullName>
    <description>Date the Bridge underwriting guidelines are approved</description>
    <inlineHelpText>Date the Bridge underwriting guidelines are approved</inlineHelpText>
    <label>Bridge - Guidelines Approved Date</label>
    <type>Date</type>
</CustomField>