force-app/main/default/objects/Lead/fields/Bridge_Guidelines_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Guidelines_Received_Date__c</fullName>
    <description>Date the Bridge underwriting guidelines are received by CoreVest.</description>
    <inlineHelpText>Date the Bridge underwriting guidelines are received</inlineHelpText>
    <label>Bridge - Guidelines Received Date</label>
    <type>Date</type>
</CustomField>