force-app/main/default/objects/Lead/fields/Bridge_Monthly_Volume__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Monthly_Volume__c</fullName>
    <description>Lender partnerships field. The estimated average monthly monetary volume of Bridge units in their lending portfolio.</description>
    <inlineHelpText>The estimated average monthly monetary volume of Bridge units in their lending portfolio</inlineHelpText>
    <label>Bridge - Monthly Volume ($)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>