force-app/main/default/objects/Lead/fields/Broker_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_First_Name__c</fullName>
    <label>Broker First Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>