force-app/main/default/objects/Lead/fields/Broker_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Broker_Last_Name__c</fullName>
    <label>Broker Last Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>