force-app/main/default/objects/Lead/fields/Broker_State__c.field-meta.xml
<CustomField>
    <fullName>Broker_State__c</fullName>
    <label>Broker State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>