force-app/main/default/objects/Lead/fields/ClearBitCity__c.field-meta.xml
<CustomField>
    <fullName>ClearBitCity__c</fullName>
    <label>Clear Bit City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>