force-app/main/default/objects/Lead/fields/ClearBitCountry__c.field-meta.xml
<CustomField>
    <fullName>ClearBitCountry__c</fullName>
    <label>Clear Bit Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>