force-app/main/default/objects/Lead/fields/ClearBitState__c.field-meta.xml
<CustomField>
    <fullName>ClearBitState__c</fullName>
    <label>Clear Bit State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>