force-app/main/default/objects/Lead/fields/Contact_Converted_Into__c.field-meta.xml
<CustomField>
    <fullName>Contact_Converted_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Converted Into</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Contact Converted Into)</relationshipLabel>
    <relationshipName>Lead_Converted</relationshipName>
    <type>Lookup</type>
</CustomField>