force-app/main/default/objects/Lead/fields/Conversation_Log__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Log__c</fullName>
    <label>Conversation Log</label>
    <type>TextArea</type>
</CustomField>