force-app/main/default/objects/Lead/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>If Foreign National, Select a Country of Residence.</description>
    <inlineHelpText>If Foreign National, Select a Country of Residence.</inlineHelpText>
    <label>Foreign National Country</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Foreign_National_picklist__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>