force-app/main/default/objects/Lead/fields/CX_Portal_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>CX_Portal_Round_Robin__c</fullName>
    <description>This lead has come through our website and continued to the portal. This picklist is used to assist our Round Robin app.</description>
    <inlineHelpText>This lead has come through our website and continued to the portal. This picklist is used to assist our Round Robin app.</inlineHelpText>
    <label>CX Portal Round Robin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>