force-app/main/default/objects/Lead/fields/Data_tape_Loaded__c.field-meta.xml
<CustomField>
    <fullName>Data_tape_Loaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data tape Loaded</label>
    <type>Checkbox</type>
</CustomField>