force-app/main/default/objects/Lead/fields/Date_set_to_Unresponsive__c.field-meta.xml
<CustomField>
    <fullName>Date_set_to_Unresponsive__c</fullName>
    <description>This is the Date and Time this Lead was set to Unresponsive</description>
    <label>Date set to Unresponsive</label>
    <type>DateTime</type>
</CustomField>