force-app/main/default/objects/Lead/fields/DateTime_Originator_Assigned__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Originator_Assigned__c</fullName>
    <label>DateTime Originator Assigned</label>
    <type>DateTime</type>
</CustomField>