force-app/main/default/objects/Lead/fields/DateTime_Status_Changed_From_Open__c.field-meta.xml
<CustomField>
    <fullName>DateTime_Status_Changed_From_Open__c</fullName>
    <label>DateTime Status Changed From Open</label>
    <type>DateTime</type>
</CustomField>