force-app/main/default/objects/Lead/fields/Deal_Converted_Into__c.field-meta.xml
<CustomField>
    <fullName>Deal_Converted_Into__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Converted Into</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads_Converted</relationshipName>
    <type>Lookup</type>
</CustomField>