force-app/main/default/objects/Lead/fields/Desired_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Desired_Loan_Amount__c</fullName>
    <label>Desired Loan Amount</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Loan_Product_s__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under $75k</fullName>
            </value>
            <value>
                <fullName>Under $100k</fullName>
            </value>
            <value>
                <fullName>Under $150k</fullName>
            </value>
            <value>
                <fullName>Under $500k</fullName>
            </value>
            <value>
                <fullName>Under $1M</fullName>
            </value>
            <value>
                <fullName>Under $3M</fullName>
            </value>
            <value>
                <fullName>$75k to $250k</fullName>
            </value>
            <value>
                <fullName>$100k to $500k</fullName>
            </value>
            <value>
                <fullName>$150k to $500k</fullName>
            </value>
            <value>
                <fullName>$250k+ to $750k</fullName>
            </value>
            <value>
                <fullName>$500k+ to $1M</fullName>
            </value>
            <value>
                <fullName>$500k to $2M</fullName>
            </value>
            <value>
                <fullName>$1M to $5M</fullName>
            </value>
            <value>
                <fullName>$2M+ to $5M</fullName>
            </value>
            <value>
                <fullName>$2M+ to $10M</fullName>
            </value>
            <value>
                <fullName>$3M to $7M</fullName>
            </value>
            <value>
                <fullName>$5M+ to $10M</fullName>
            </value>
            <value>
                <fullName>$7M+ to $10M</fullName>
            </value>
            <value>
                <fullName>$10M+ to $20M</fullName>
            </value>
            <value>
                <fullName>$750k+</fullName>
            </value>
            <value>
                <fullName>$1M+</fullName>
            </value>
            <value>
                <fullName>$5M+</fullName>
            </value>
            <value>
                <fullName>$10M+</fullName>
            </value>
            <value>
                <fullName>$20M+</fullName>
            </value>
            <value>
                <fullName>$250K to $750K</fullName>
                <isActive>false</isActive>
                <label>$250K to $750K</label>
            </value>
            <value>
                <fullName>$2M to $10M</fullName>
                <isActive>false</isActive>
                <label>$2M to $10M</label>
            </value>
            <value>
                <fullName>$2M to $5M</fullName>
                <isActive>false</isActive>
                <label>$2M to $5M</label>
            </value>
            <value>
                <fullName>$500K to $1M</fullName>
                <isActive>false</isActive>
                <label>$500K to $1M</label>
            </value>
            <value>
                <fullName>$5M to $10M</fullName>
                <isActive>false</isActive>
                <label>$5M to $10M</label>
            </value>
            <value>
                <fullName>$7M to $10M</fullName>
                <isActive>false</isActive>
                <label>$7M to $10M</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>