force-app/main/default/objects/Lead/fields/Disposition__c.field-meta.xml
<CustomField>
    <fullName>Disposition__c</fullName>
    <label>Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Prospect</fullName>
            </value>
            <value>
                <fullName>Bad Contact Info</fullName>
            </value>
            <value>
                <fullName>Bankruptcy / Foreclosure</fullName>
            </value>
            <value>
                <fullName>Deceased/ Not Reachable</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Experience</fullName>
            </value>
            <value>
                <fullName>Future Prospect - FICO</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Income</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Liquidity</fullName>
            </value>
            <value>
                <fullName>Future Prospect - Product Type</fullName>
            </value>
            <value>
                <fullName>Lack of Experience</fullName>
            </value>
            <value>
                <fullName>Low Fico</fullName>
            </value>
            <value>
                <fullName>Low Income</fullName>
            </value>
            <value>
                <fullName>Low Liquidity</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>Not Investor/Broker</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Spam / Solicitation</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Wrong Number</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
                <isActive>false</isActive>
                <label>Contacted</label>
            </value>
            <value>
                <fullName>Current Credit Issue</fullName>
                <isActive>false</isActive>
                <label>Current Credit Issue</label>
            </value>
            <value>
                <fullName>DO NOT CALL</fullName>
                <isActive>false</isActive>
                <label>DO NOT CALL</label>
            </value>
            <value>
                <fullName>Left Message / Sent Email</fullName>
                <isActive>false</isActive>
                <label>Left Message / Sent Email</label>
            </value>
            <value>
                <fullName>Non-Borrower</fullName>
                <isActive>false</isActive>
                <label>Non-Borrower</label>
            </value>
            <value>
                <fullName>Seeking Non-CAF Loan</fullName>
                <isActive>false</isActive>
                <label>Seeking Non-CAF Loan</label>
            </value>
            <value>
                <fullName>Seeking Non-CAF Product</fullName>
                <isActive>false</isActive>
                <label>Seeking Non-CAF Product</label>
            </value>
            <value>
                <fullName>Seeking Personal Loan</fullName>
                <isActive>false</isActive>
                <label>Seeking Personal Loan</label>
            </value>
            <value>
                <fullName>Set Appointment</fullName>
                <isActive>false</isActive>
                <label>Set Appointment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>