force-app/main/default/objects/Lead/fields/Do_Not_Re_Assign__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Re_Assign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CIS 7065 - checkbox to exclude leads from the ScheduableApexClass that automatically reassigns them to the House Account if their lead status is Contacted and the Lead was created 20+ days ago.</description>
    <inlineHelpText>Check this box if you want this lead to be excluded from the automation that reassigns it to the House Account if the lead was created at least 20 days prior and the lead status is Contacted.</inlineHelpText>
    <label>Do Not Auto Re-Assign</label>
    <type>Checkbox</type>
</CustomField>