force-app/main/default/objects/Lead/fields/EmailDomain__c.field-meta.xml
<CustomField>
    <fullName>EmailDomain__c</fullName>
    <description>Pulls The Company Domain From Email Address</description>
    <formula>RIGHT(  Email ,(LEN( Email )-FIND(&quot;@&quot;, Email )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pulls The Company Domain From Email Address</inlineHelpText>
    <label>Email Domain</label>
    <type>Text</type>
</CustomField>