force-app/main/default/objects/Lead/fields/Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Entry_Id__c</fullName>
    <description>Id from the Short Form on the marketing website</description>
    <inlineHelpText>Id from the Short Form on the marketing website</inlineHelpText>
    <label>Entry Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>