force-app/main/default/objects/Lead/fields/Estimated_ARV__c.field-meta.xml
<CustomField>
    <fullName>Estimated_ARV__c</fullName>
    <label>Estimated ARV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>