force-app/main/default/objects/Lead/fields/Estimated_Credit_Score__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Credit_Score__c</fullName>
    <label>Estimated Credit Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Under 620</fullName>
            </value>
            <value>
                <fullName>Under 660</fullName>
            </value>
            <value>
                <fullName>620-649</fullName>
            </value>
            <value>
                <fullName>650-699</fullName>
            </value>
            <value>
                <fullName>660-719</fullName>
            </value>
            <value>
                <fullName>720-779</fullName>
            </value>
            <value>
                <fullName>700+</fullName>
            </value>
            <value>
                <fullName>780+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>