force-app/main/default/objects/Lead/fields/Estimated_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Loan_Amount__c</fullName>
    <label>Estimated Loan Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>