force-app/main/default/objects/Lead/fields/Estimated_Monthly_Payments__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Monthly_Payments__c</fullName>
    <label>Estimated Monthly Payments</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>