force-app/main/default/objects/Lead/fields/Estimated_Rate__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rate__c</fullName>
    <label>Estimated Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>