force-app/main/default/objects/Lead/fields/Existing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Existing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Leads (Existing Contact)</relationshipLabel>
    <relationshipName>Existing_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>