force-app/main/default/objects/Lead/fields/External_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Record_ID__c</fullName>
    <description>This is the Salesforce/Record ID from the system of origination</description>
    <externalId>true</externalId>
    <inlineHelpText>This is the Salesforce/Record ID from the system of origination</inlineHelpText>
    <label>External Record ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>