force-app/main/default/objects/Lead/fields/First_Touch__c.field-meta.xml
<CustomField>
    <fullName>First_Touch__c</fullName>
    <description>Date and Time of first contact</description>
    <label>First Touch</label>
    <type>DateTime</type>
</CustomField>