force-app/main/default/objects/Lead/fields/First_Touch_checkbox__c.field-meta.xml
<CustomField>
    <fullName>First_Touch_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Touch checkbox</label>
    <type>Checkbox</type>
</CustomField>