force-app/main/default/objects/Lead/fields/Foreign_National__c.field-meta.xml
<CustomField>
    <fullName>Foreign_National__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foreign National</label>
    <type>Checkbox</type>
</CustomField>