force-app/main/default/objects/Lead/fields/Form_Title__c.field-meta.xml
<CustomField>
    <fullName>Form_Title__c</fullName>
    <description>Title of the Form on the website used to create this Lead</description>
    <inlineHelpText>Title of the Form on the website used to create this Lead</inlineHelpText>
    <label>Form Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>