force-app/main/default/objects/Lead/fields/Formatted_Phone__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Phone__c</fullName>
    <description>Removes non-digit characters from Phone</description>
    <formula>SUBSTITUTE(
  SUBSTITUTE(
    SUBSTITUTE(
      SUBSTITUTE(
        SUBSTITUTE(
          SUBSTITUTE(
            Phone, 
            &apos; &apos;, 
            &apos;&apos;),
          &apos;+&apos;,
          &apos;&apos;),
        &apos;(&apos;,
        &apos;&apos;),
      &apos;)&apos;,
      &apos;&apos;),
    &apos;-&apos;,
    &apos;&apos;),
  &apos;.&apos;,
  &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Phone</label>
    <type>Text</type>
</CustomField>