force-app/main/default/objects/Lead/fields/Geo_Target__c.field-meta.xml
<CustomField>
    <fullName>Geo_Target__c</fullName>
    <description>This is controlled by the Lead Form Creation</description>
    <label>Geo Target</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arizona</fullName>
            </value>
            <value>
                <fullName>New Jersey</fullName>
            </value>
            <value>
                <fullName>New York</fullName>
            </value>
            <value>
                <fullName>Missouri</fullName>
            </value>
            <value>
                <fullName>Illinois</fullName>
            </value>
            <value>
                <fullName>Florida</fullName>
            </value>
            <value>
                <fullName>Washington</fullName>
            </value>
            <value>
                <fullName>Indiana</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
                <isActive>false</isActive>
                <label>Alabama</label>
            </value>
            <value>
                <fullName>Arkansas</fullName>
                <isActive>false</isActive>
                <label>Arkansas</label>
            </value>
            <value>
                <fullName>California</fullName>
                <isActive>false</isActive>
                <label>California</label>
            </value>
            <value>
                <fullName>Georgia</fullName>
                <isActive>false</isActive>
                <label>Georgia</label>
            </value>
            <value>
                <fullName>Idaho</fullName>
                <isActive>false</isActive>
                <label>Idaho</label>
            </value>
            <value>
                <fullName>Iowa</fullName>
                <isActive>false</isActive>
                <label>Iowa</label>
            </value>
            <value>
                <fullName>Maryland</fullName>
                <isActive>false</isActive>
                <label>Maryland</label>
            </value>
            <value>
                <fullName>Michigan</fullName>
                <isActive>false</isActive>
                <label>Michigan</label>
            </value>
            <value>
                <fullName>Nevada</fullName>
                <isActive>false</isActive>
                <label>Nevada</label>
            </value>
            <value>
                <fullName>North Carolina</fullName>
                <isActive>false</isActive>
                <label>North Carolina</label>
            </value>
            <value>
                <fullName>North-Carolina</fullName>
                <isActive>false</isActive>
                <label>North-Carolina</label>
            </value>
            <value>
                <fullName>Ohio</fullName>
                <isActive>false</isActive>
                <label>Ohio</label>
            </value>
            <value>
                <fullName>Oregon</fullName>
                <isActive>false</isActive>
                <label>Oregon</label>
            </value>
            <value>
                <fullName>Rhode-Island</fullName>
                <isActive>false</isActive>
                <label>Rhode-Island</label>
            </value>
            <value>
                <fullName>South Carolina</fullName>
                <isActive>false</isActive>
                <label>South Carolina</label>
            </value>
            <value>
                <fullName>Texas</fullName>
                <isActive>false</isActive>
                <label>Texas</label>
            </value>
            <value>
                <fullName>Utah</fullName>
                <isActive>false</isActive>
                <label>Utah</label>
            </value>
            <value>
                <fullName>Vermont</fullName>
                <isActive>false</isActive>
                <label>Vermont</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>